Fixing crash regression bug 234626. Add kungFuDeathGrips to functions in nsJSContext that execute JS (some already had them) to avoid having JSContexts die on us while they're still on the stack. r=caillon@aillon.org, sr=dbaron@dbaron.org, a=chofmann@mozilla.org